# octa-dashboard

./: .env.template  .gitignore  Cargo.toml  Dockerfile  README.md  dev.sh  docker-compose.yml  package-lock.json  package.json
backend/: Cargo.toml
backend/src/: config.rs  error.rs  main.rs
backend/src/agents/: health.rs  mod.rs  registry.rs
backend/src/auth/: github_oauth.rs  middleware.rs  mod.rs  session.rs
backend/src/db/: migrations.rs  mod.rs  models.rs  pool.rs
backend/src/db/migrations/: 001_users.sql  002_team_members.sql  003_agents.sql  004_kb_documents.sql  005_analytics_events.sql  006_api_keys.sql  007_kb_is_folder.sql  008_microservices.sql  011_platform_secrets.sql  012_projects.sql  013_api_key_suffix.sql  014_agent_sources.sql  015_microservices_data_driven.sql  016_platform_secrets_description.sql  017_kb_rag.sql  018_kb_description.sql  019_drop_legacy_kb_documents.sql  020_watcher.sql
backend/src/routes/: agent_sources.rs  agents.rs  analytics.rs  api_keys.rs  auth.rs  microservices.rs  mod.rs  platform_secrets.rs  proxy.rs  team.rs
crates/agent-protocol/: Cargo.toml
crates/agent-protocol/src/: lib.rs
frontend/dashboard/: index.html  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/dashboard/src/: App.tsx  main.tsx
frontend/dashboard/src/api/: client.ts  types.ts
frontend/dashboard/src/components/: ChartCard.tsx  Layout.tsx  PageHeader.tsx  Sidebar.tsx  StatCard.tsx
frontend/dashboard/src/hooks/: useAgentSources.ts  useAgents.ts  useAnalytics.ts  useApiKeys.ts  useAuth.ts  useMicroservices.ts  usePlatformSecrets.ts  useServices.ts  useTeam.ts
frontend/dashboard/src/pages/: HomePage.tsx  LoginPage.tsx  MicroserviceAppPage.tsx  SettingsPage.tsx  TeamPage.tsx  WorkerAgentsPage.tsx
frontend/dashboard/src/styles/: globals.css
microservices/knowledgebase-agent/: Cargo.toml  Dockerfile
microservices/knowledgebase-agent/frontend/: index.html  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
microservices/knowledgebase-agent/frontend/src/: App.tsx  main.tsx  types.ts
microservices/knowledgebase-agent/frontend/src/api/: client.ts  kb.ts
microservices/knowledgebase-agent/frontend/src/components/: ChatTab.tsx  DocumentDetail.tsx  DocumentsTab.tsx  KbDetailView.tsx  KbListView.tsx  SettingsTab.tsx
microservices/knowledgebase-agent/frontend/src/hooks/: useDocuments.ts
microservices/knowledgebase-agent/src/: auth.rs  config.rs  eval.rs  main.rs  routes.rs  state.rs  storage.rs
microservices/knowledgebase-agent/src/controllers/: chat_sessions.rs  documents.rs  folders.rs  knowledgebases.rs  mod.rs  query.rs  retrieve.rs  settings.rs  wiki.rs
microservices/knowledgebase-agent/src/db/: chat_jobs.rs  chat_sessions.rs  documents.rs  folders.rs  knowledgebases.rs  mod.rs
microservices/knowledgebase-agent/src/models/: chat_job.rs  chat_session.rs  knowledgebase.rs  mod.rs
microservices/knowledgebase-agent/src/services/: chat_worker.rs  llm.rs  mod.rs  rag_agent.rs
microservices/watcher-agent/: Cargo.toml
microservices/watcher-agent/frontend/: package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
microservices/watcher-agent/frontend/src/: App.tsx  main.tsx  types.ts
microservices/watcher-agent/frontend/src/api/: client.ts
microservices/watcher-agent/frontend/src/hooks/: useWatcher.ts
microservices/watcher-agent/src/: config.rs  github.rs  main.rs  routes.rs  storage.rs  worker.rs
