[package]
name = "dashboard-server"
version = "0.1.0"
edition = "2024"
default-run = "dashboard-server"

[dependencies]
agent-protocol = { path = "../crates/agent-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
reqwest = { workspace = true }
deadpool-postgres = { workspace = true }
tokio-postgres = { workspace = true }
jsonwebtoken = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
axum-extra = { version = "0.10", features = ["cookie"] }
http = "1"
time = "0.3"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
