[package]
name = "knowledgebase-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-protocol = { path = "../../crates/agent-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
deadpool-postgres = { workspace = true }
tokio-postgres = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
