[package]
name = "knowledgebase-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-protocol = { path = "../../crates/agent-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true, features = ["multipart"] }
tower-http = { workspace = true }
dotenvy = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Database (sqlx — runtime queries, no compile-time DB needed)
sqlx = { workspace = true }

# S3-compatible document storage
rust-s3 = { version = "0.35", features = ["tokio-rustls-tls"], default-features = false }

# RAG agent (ReAct) + OpenAI
metalcraft = { version = "0.8", features = ["rig"] }
rig = "0.37"

# Misc
regex = "1"
async-trait = "0.1"
async-stream = "0.3"
futures = "0.3"
thiserror = "2"

[dev-dependencies]
# Spice — Rust eval framework for nondeterministic LLM agents.
spice-framework = "0.1"
